--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                         <h5 class="pb-3">Balance: <span id="total-balance"></span> </h5>
                         <div class="d-flex justify-content-center align-items-center gap-2">
                             <span>Save:</span>
-                            <input type="number" class=" border border-0 py-2"
+                            <input type="number" id="saving-percentage-field" class=" border border-0 py-2"
                                 style="background-color: rgb(211, 205, 205);">
                             <span>%</span>
-                            <button class="btn btn-primary px-4 rounded">Save</button>
+                            <button  id="btn-save" class="btn btn-primary px-4 rounded">Save</button>
                         </div>
                         <h5 class="py-3">Saving Amount: <span id="saving-amount"></span> </h5>
                         <h5 class="pb-3">Remaining Balance: <span id="remaining-balance"></span> </h5>
